con imagen en recycler

--- a/app/src/main/res/layout/fragment_detalle_obra.xml
+++ b/app/src/main/res/layout/fragment_detalle_obra.xml
@@ -9,9 +9,9 @@
     <!-- TODO: Update blank fragment layout -->
     <ImageView
         android:id="@+id/iv_imagen_id"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+
         android:src="@drawable/ic_launcher_background"/>
     <TextView
         android:id="@+id/tv_nombre_id"
