--- a/app/src/main/res/layout/main_cell.xml
+++ b/app/src/main/res/layout/main_cell.xml
@@ -9,25 +9,34 @@
     android:layout_margin="10dp"
     app:cardCornerRadius="5dp"
     >
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/textviewCell_id"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4"
-            android:padding="6dp"
-            android:gravity="center_vertical"
-            android:textSize="16sp"
-            android:fontFamily="@font/montserratregular"
-            />
+        android:layout_height="wrap_content">
+
         <ImageView
             android:id="@+id/imageviewObra_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher_background"/>
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="H,16:9"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/textviewCell_id"
+            app:layout_constraintVertical_chainStyle="packed"/>
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/textviewCell_id"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="6dp"
+            android:textSize="16sp"
+            android:fontFamily="@font/montserratregular"
+            app:layout_constraintTop_toBottomOf="@id/imageviewObra_id"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
