--- a/app/src/main/res/layout/main_cell.xml
+++ b/app/src/main/res/layout/main_cell.xml
@@ -17,7 +17,7 @@
             android:id="@+id/imageviewObra_id"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             app:layout_constraintDimensionRatio="H,16:9"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +32,7 @@
             android:layout_margin="16dp"
             android:padding="6dp"
             android:textSize="16sp"
+            android:textColor="@color/colorPrimaryDark"
             android:fontFamily="@font/montserratregular"
             app:layout_constraintTop_toBottomOf="@id/imageviewObra_id"
             app:layout_constraintStart_toStartOf="parent"
