--- a/app/src/main/res/layout/fragment_detalle_obra.xml
+++ b/app/src/main/res/layout/fragment_detalle_obra.xml
@@ -1,70 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="@color/colorPrimary">
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimary"
     tools:context=".DetalleObraFragment">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="@color/colorPrimary">
 
     <!-- TODO: Update blank fragment layout -->
-    <ImageView
-        android:id="@+id/iv_imagen_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/iv_imagen_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+        />
+        <TextView
+            android:id="@+id/tv_nombre_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/titulo_obra"
+            android:textSize="24sp"
+            android:fontFamily="@font/montserratregular"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
+            android:gravity="center"
+            android:padding="12dp"
+           />
+        <TextView
+            android:id="@+id/tv_artist_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:padding="12dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:fontFamily="@font/montserratregular"
+            />
 
-        android:src="@drawable/ic_launcher_background"/>
-    <TextView
-        android:id="@+id/tv_nombre_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/titulo_obra"
-        android:textSize="24sp"
-        android:fontFamily="@font/montserratregular"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimaryDark"
-        android:gravity="center"
-        android:padding="12dp"
-        android:layout_below="@id/iv_imagen_id"/>
-    <TextView
-        android:id="@+id/tv_artist_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_below="@id/tv_nombre_id"
-        android:padding="12dp"
-        android:textColor="@color/colorPrimaryDark"
-        android:fontFamily="@font/montserratregular"
-        />
-    <TextView
-        android:id="@+id/tv_artist_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_toRightOf="@id/tv_artist_name"
-        android:padding="12dp"
-        android:textColor="@color/colorPrimaryDark"
-        android:fontFamily="@font/montserratregular"
-        />
-    <TextView
-        android:id="@+id/tv_artist_nationality"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_below="@id/tv_artist_name"
-        android:padding="6dp"
-        android:layout_marginStart="6dp"
-        android:fontFamily="@font/montserratregular"
-        />
+        <TextView
+            android:id="@+id/tv_artist_nationality"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:padding="6dp"
+            android:layout_marginStart="6dp"
+            android:fontFamily="@font/montserratregular"
+            />
 
-    <TextView
-        android:id="@+id/tv_influenced_by"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_below="@id/tv_artist_nationality"
-        android:padding="6dp"
-        android:layout_marginStart="6dp"
-        android:fontFamily="@font/montserratregular"
-        />
+        <TextView
+            android:id="@+id/tv_influenced_by"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:padding="6dp"
+            android:layout_marginStart="6dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:fontFamily="@font/montserratregular"
+            />
 
-</RelativeLayout>
+    </LinearLayout>
+
+</ScrollView>
+
+</LinearLayout>
