--- a/app/src/main/res/layout/fragment_obras.xml
+++ b/app/src/main/res/layout/fragment_obras.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
     tools:context=".ObrasFragment">
 
@@ -10,7 +11,6 @@
         android:id="@+id/recycler_id"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     </android.support.v7.widget.RecyclerView>
 
 
