--- a/app/src/main/res/layout/fragment_obras.xml
+++ b/app/src/main/res/layout/fragment_obras.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    tools:context=".ObrasFragment">
+    tools:context=".view.ObrasFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_id"
